--- a/Views/BookMaster/Addbook.cshtml
+++ b/Views/BookMaster/Addbook.cshtml
@@ -74,17 +74,29 @@
                     }
                 </div>
 
-                <button type="submit" class="btn btn-success mt-3">@(Model.BookId > 0 ? "Update Book" : "Add Book")</button>
-                <a asp-action="BookList" class="btn btn-secondary mt-3">Cancel</a>
+                <div class="d-flex justify-content-between align-items-center mt-3">
+                    <!-- Left: Submit Button -->
+                    <button type="submit" class="btn btn-success">
+                        @(Model.BookId > 0 ? "Update Book" : "Add Book")
+                    </button>
+
+                    <!-- Center: Mass Import -->
+                    <div class="text-center flex-fill">
+                        <a class="btn btn-info"
+                           data-bs-toggle="modal"
+                           data-bs-target="#recents">
+                            Mass Import books
+                        </a>
+                    </div>
+
+                    <!-- Right: Cancel Button -->
+                    <a asp-action="BookList" class="btn btn-secondary">
+                        Cancel
+                    </a>
+                </div>
             </form>
-            <!-- 🔘 Mass Import Button -->
-            <div class="mt-4">
-                <a class="btn btn-info"
-                   data-bs-toggle="modal"
-                   data-bs-target="#recents">
-                    @* <img src="~/assets/img/icons/transcation.svg" alt="icon" class="me-1" /> *@
-                    Mass Import books
-                </a>
+
+
         </div>
     </div>
 </div>
