--- a/Views/BorrowMaster/BorrowList.cshtml
+++ b/Views/BorrowMaster/BorrowList.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<library_management.Models.Borrow>
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 
 @{
     Layout = "/Views/Shared/_mainLayout.cshtml";
@@ -35,12 +36,12 @@
     </div>
     <div class="card-header py-3 d-flex justify-content-between align-items-center">
         <a asp-controller="BorrowMaster" asp-action="UpdateLibraryFine" class="btn btn-warning">Update Fine</a>
-        <a href="@Url.Action("PendingBorrows", "BorrowMaster")" class="btn btn-warning mb-3">
-            Manage Borrows Approvals
-        </a>
-        <a href="@Url.Action("PendingReturns", "BorrowMaster")" class="btn btn-warning mb-3">
-            Manage Returns Approvals
-        </a>
+        @* <a href="@Url.Action("PendingBorrows", "BorrowMaster")" class="btn btn-warning mb-3"> *@
+        @*     Manage Borrows Approvals *@
+        @* </a> *@
+        @* <a href="@Url.Action("PendingReturns", "BorrowMaster")" class="btn btn-warning mb-3"> *@
+        @*     Manage Returns Approvals *@
+        @* </a> *@
         
     </div>
 
@@ -125,10 +126,9 @@
 
 
 <!-- Add Bootstrap CSS in <head> section -->
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-<!-- Add Bootstrap JS and jQuery before </body> tag -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 <script>
     $(document).ready(function () {
         console.log("Initializing DataTable...");
